<resources>
    <string name="app_name">Encapsulate</string>

    <string name="title_section1">Dashboard</string>
    <string name="title_section2">Your Content</string>
    <string name="title_section3">Community Photos</string>
    <string name="title_section4">On National Day...</string>
    <string name="title_section5">Special Occasions</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh All Content</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="best_of_past_category">BestOfPast</string>
    <string name="day_as_sgean_category">DayAsSGean</string>
    <string name="future_hopes_category">FutureHopes</string>

    <string name="hello_world">Hello world!</string>

    <string name="signup">New to Encapsulate? Sign up here.</string>
    <string name="login">Login</string>
    <string name="login_dialog_message">Please wait while we log you into Encapsulate…</string>
    <string name="join">Join Encapsulate</string>
    <string name="subtitle">Celebrate SG50 with a crowd-sourced time capsule of what we cherish of the past, everyday Singaporean things, and our hopes for the future!</string>
    <string name="create">Create Account</string>
    <string name="email">Email</string>
    <string name="passwords_dont_match_error">Your passwords do not match. Please re-enter.</string>
    <string name="empty_fields_error">Please fill in the empty fields.</string>
    <string name="signup_dialog_message">Please wait while we create your account…</string>
    <string name="nothing"/>
    <string name="action_logout">Logout</string>
    <string name="post_new_photo">Post New Photo</string>
    <string name="logout_dialog_message">Please wait while we log you out of Encapsulate…</string>
    <string name="title_activity_post_new">Post a New Photo</string>
    <string name="picdisc">Picture the User has chosen</string>
    <string name="remove">Remove</string>
    <string name="takePhoto">Take a New Photo</string>
    <string name="uploadPhoto">Upload Existing Photo</string>
    <string name="title">Title</string>
    <string name="caption">Caption</string>
    <string name="category">Category</string>
    <string name="postPhoto">Post Photo</string>
    <string name="appName">Encapsulate</string>
    <string name="menu">menu</string>
    <string name="stuff">Pic User Has Chosen</string>
    <string name="likes">likes</string>
    <string name="space">" "</string>
    <string name="photo_by">Photo by:</string>

    <string-array name="category_arrays">
        <item>Category</item>
        <item>@string/photo_title_section2</item>
        <item>@string/photo_title_section3</item>
        <item>@string/photo_title_section4</item>
    </string-array>
    <string name="photo_title_section1">Top Photos</string>
    <string name="photo_title_section2">Best of the Past</string>
    <string name="photo_title_section3">A Day in SG</string>
    <string name="photo_title_section4">Future Hopes for SG</string>
    <string name="title_activity_camera">Take A Photo</string>
    <string name="title_activity_on_national_day">Wishes</string>
    <string name="placeholder">SG so nice</string>
    <string name="placeholderName">John Smith</string>
    <string name="enterHere">Enter Here</string>
    <string name="post">Post</string>
    <string name="onNatDay">On Singapore\'s 50th birthday, I…</string>
    <string name="onNatDayAdd">What did you do to celebrate Singapore\'s 50th birthday?</string>
    <string name="back">Back</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="sg50">sg50</string>
    <string name="title_activity_play_video">PlayVideoActivity</string>
    <string name="suggest">Suggest</string>
    <string name="suggestInfo">Suggest a video for the current theme.</string>
    <string name="login_error">Error logging in, please try again.</string>
    <string name="signup_error">Error signing up, please try again.</string>
</resources>
