<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

      <item android:id="@+id/action_logout"
          android:title="@string/action_logout"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:orderInCategory="200"
        android:icon="@drawable/ic_refresh_white_24dp"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_back"
        android:title="@string/back"
        android:orderInCategory="100"
        android:icon="@drawable/backarrow"
        app:showAsAction="ifRoom"/>
</menu>